--- a/santaluzia.website/mustdo.html
+++ b/santaluzia.website/mustdo.html
@@ -6,8 +6,8 @@
     <title>Santa Luzia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
@@ -18,8 +18,6 @@
     
         </ul>
     </nav>
-    <img src="/img/santaluziafoto!.jpg" width="700">
-    <p> reis naar Santa Luzia? Hier vind je alle leuke plekjes en tips die je MOET uitproberen als je er bent! </p>
-    
+    <h1>must do's</h1>
 </body>
 </html>
