--- a/santaluzia.html
+++ b/santaluzia.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Santa Luzia</h1>
-    <img src="/img/ luzia foto2.jpg" width="700">
-    <p>Santa Luzia is een dorp aan de zuidelijke kust van Portugal en ligt in het oostelijke deel van de Algarve. 
-        Hier kan je over alle mooie plekken, leuke restaurant en must do’s lezen die allemaal in Santa Luzia te vinden zijn. 
+     <img src="/img/ luzia foto2.jpg" width="700">
+     <p>Santa Luzia is een dorp aan de zuidelijke kust van Portugal en ligt in het oostelijke deel van de Algarve. 
+          Hier kan je over alle mooie plekken, leuke restaurant en must do’s lezen die allemaal in Santa Luzia te vinden zijn. 
         </p>
     <h2>mooie plekken</h2>
     <h3>Praia do Barrill</h3>
     <p>Braia do barril is een gezzelig strandje met schattige winketljes en barretjes.</p>
-    <img src="/img/ do barril.webp" width="200">
+    <img src="santaluzia.website/img/do barril.webp" width="200">
     <h2>restaurants</h2>
     <h3>voorbeeld</h3>
 
