--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
         </ul>
     </nav>
-    <img src="/img/santa luzia website/santaluziafoto!.jpg" width="700">
+    <img src="img/santaluziafoto!.jpg" width="700">
     <p> reis naar Santa Luzia? Hier vind je alle leuke plekjes en tips die je MOET uitproberen als je er bent! </p>
     
 </body>
