--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="omgeving.html">omgeving</a></li>
-            <li><a href="mustdo.html">must do's</a></li>
-            <li><a href="algemeneinfo.html">algemene informatie</a></li>
-            <li><a href="bereikbaarheid.html">bereikbaarheid</a></li>
-    
-        </ul>
-    </nav>
-    <img src="img/santaluziafoto!.jpg" width="700">
-    <p> reis naar Santa Luzia? Hier vind je alle leuke plekjes en tips die je MOET uitproberen als je er bent! </p>
-    
+
+<body class="index">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="omgeving.html">omgeving</a></li>
+                <li><a href="mustdo.html">must do's</a></li>
+                <li><a href="algemeneinfo.html">algemene informatie</a></li>
+                <li><a href="bereikbaarheid.html">bereikbaarheid</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <p class="white-bg"> reis naar Santa Luzia? Hier vind je alle leuke plekjes en tips die je MOET uitproberen als
+            je er bent! </p>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
